try to create a portfolio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
       <div class="row justify-content-center mb-4">
         <div class="col-md-10 text-center font-italic">
-          <p>Junior? No! just a little of developer website and mobile, now i am still learn, learn, learn and try about it. ;)</p>
+          <p>Junior? No! just a little of developer website and mobile, now i am still learning and trying about it. ;)</p>
           <p>Email : 
             <a href="mailto:msolehudin130998@gmail.com">msolehudin130998@gmail.com</a>
           </p>
