typo and add text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
       <div class="row justify-content-center mb-4">
         <div class="col-md-10 text-center font-italic">
-          <p>Junior? No! just a little of developer website and mobile, now i am still learning and trying about it. ;)</p>
+          <p>Junior? No! just a little of developer website and mobile. I am still learning and trying about developer website and mobile. ;)</p>
           <p>Email : 
             <a href="mailto:msolehudin130998@gmail.com">msolehudin130998@gmail.com</a>
           </p>
@@ -204,7 +204,7 @@
     <div class="container">
       <div class="row pt-3">
         <div class="col text-center">
-          <p>&copy; 2020 Soholeh.</p>
+          <p>Copyright &copy; 2020 Soholeh.</p>
         </div>
       </div>
     </div>
