add bgi and change font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- My CSS -->
@@ -21,16 +22,16 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar navbar-light" style="background-color: #D3D3D3;">
       <div class="container">
-        <a class="navbar-brand" href="#">Muhammad Solehudin</a>
+        <a class="navbar-brand" href="#home">Muhammad Solehudin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#about">About</a>
-            <a class="nav-item nav-link" href="#portfolio">Portfolio</a>
-            <a class="nav-item nav-link" href="#contact" tabindex="-1" aria-disabled="true">Contact</a>
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link font-weight-bold" href="#home">Home</a>
+            <a class="nav-item nav-link font-weight-bold" href="#about">About</a>
+            <a class="nav-item nav-link font-weight-bold" href="#portfolio">Portfolio</a>
+            <a class="nav-item nav-link font-weight-bold" href="#contact" tabindex="-1" aria-disabled="true">Contact</a>
           </div>
         </div>
       </div>
@@ -38,12 +39,12 @@
 
     <!-- Home -->
     <section id="home" class="home">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron" style="background-image: url(img/bg.jpg); background-size: 100% 100%;">
       <div class="container text-center" >
         <img src="img/me.jpg" width="25%" class="rounded-circle img-thumbnail">
         <h1 class="display-4">Muhammad Solehudin</h1>
-        <p class="lead font-italic">I am an Information Systems Student at STMIK AKAKOM Yogyakarta.</p>
-        <p class="lead font-italic">I am interested in Web and Mobile Development.</p>
+        <p class="lead">I am an Information Systems Student at STMIK AKAKOM Yogyakarta.</p>
+        <p class="lead">I am interested in Web and Mobile Development.</p>
       </div>
     </div>
     </section>
@@ -58,8 +59,8 @@
       </div>
       
       <div class="row justify-content-center mb-4">
-        <div class="col-md-10 text-center font-italic">
-          <p>Junior? No! just a little of developer website and mobile. I am still learning and trying about developer website and mobile. ;)</p>
+        <div class="col-md-10 text-center">
+          <p>Junior? No! just a little of developer website and mobile, now i am still learn, learn, learn and try about it. ;)</p>
           <p>Email : 
             <a href="mailto:msolehudin130998@gmail.com">msolehudin130998@gmail.com</a>
           </p>
@@ -200,11 +201,11 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white">
+  <footer class="text-dark" style="background-color: #D3D3D3;">
     <div class="container">
       <div class="row pt-3">
         <div class="col text-center">
-          <p>Copyright &copy; 2020 Soholeh.</p>
+          <p>Copyright &copy; 2020.</p>
         </div>
       </div>
     </div>
