--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="https://instagram.com/soholeh" target="_blank" class="fa fa-instagram"></a>
           </p>
           <p>GitHub : 
-            <a href="https://github.com/soholeh">@Soholeh</a>
+            <a href="https://github.com/soholeh" target="_blank" class="fa fa-github"></a>
           </p>
         </div>
       </div>
@@ -170,10 +170,16 @@
             <li class="list-group-item">My Office</li>
             <li class="list-group-item">Jl. Rajawali Babadan Baru No. 98, Banguntapan, Bantul 55198</li>
             <li class="list-group-item">Special Region of Yogyakarta, Indonesia</li>
+            <li class="list-group-item fa fa-whatsapp">     
+                <a href="https://api.whatsapp.com/send?phone=6281227917430" target="_blank" class="">081227917430</a>
+            </li>
           </ul>
         </div>
         <div class="col-lg-6">
-          <form>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d988.1906561089422!2d110.40393982916662!3d-7.81493299964804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDgnNTMuOCJTIDExMMKwMjQnMTYuMiJF!5e0!3m2!1sid!2sid!4v1583710124954!5m2!1sid!2sid"
+           width="600" height="413" frameborder="1" style="border:1;" allowfullscreen="">
+          </iframe>
+          <!-- <form>
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" class="form-control" id="name">
@@ -193,7 +199,7 @@
             <div class="form-group">
               <button type="submit" class="btn btn-primary">Send Message!</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
 
