--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       
       <div class="row justify-content-center mb-4">
         <div class="col-md-10 text-center">
-          <p>Junior? No! just a little of developer website and mobile, now i am still learn, learn, learn and try about it. ;)</p>
+          <p>Junior? No! just a little of developer website and mobile. I am still learning and trying about developer website and mobile. ;)</p>
           <p>Email : 
             <a href="mailto:msolehudin130998@gmail.com">msolehudin130998@gmail.com</a>
           </p>
@@ -175,31 +175,12 @@
             </li>
           </ul>
         </div>
+        
+        <!-- Map -->
         <div class="col-lg-6">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d988.1906561089422!2d110.40393982916662!3d-7.81493299964804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDgnNTMuOCJTIDExMMKwMjQnMTYuMiJF!5e0!3m2!1sid!2sid!4v1583710124954!5m2!1sid!2sid"
            width="600" height="413" frameborder="1" style="border:1;" allowfullscreen="">
           </iframe>
-          <!-- <form>
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" id="name">
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" id="email">
-            </div>
-            <div class="form-group">
-              <label for="phone">Phone</label>
-              <input type="text" class="form-control" id="phone">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea name="message" id="message" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary">Send Message!</button>
-            </div>
-          </form> -->
         </div>
       </div>
 
