--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
             </li>
           </ul>
         </div>
-        
+
         <!-- Map -->
         <div class="col-lg-6">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d988.1906561089422!2d110.40393982916662!3d-7.81493299964804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDgnNTMuOCJTIDExMMKwMjQnMTYuMiJF!5e0!3m2!1sid!2sid!4v1583710124954!5m2!1sid!2sid"
-           width="600" height="413" frameborder="1" style="border:1;" allowfullscreen="">
+            width="100%" height="413" frameborder="1" style="border:1;" allowfullscreen="">
           </iframe>
         </div>
       </div>
