--- a/index.html
+++ b/index.html
@@ -1,207 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <title>Personal Portfolio Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Template css Files -->
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/skins/pink.css" type="text/css">
+</head>
+<body>
 
-    <!-- Bootstrap CSS -->
-    <!-- <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <!-- My CSS -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <title>Muhammad Solehudin</title>
-  </head>
-  <body class="mt-5">
-
-    <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar navbar-light" style="background-color: #D3D3D3;">
+<!-- Main Container -->
+<div class="main-container">
+  <!-- Aside -->
+  <div class="aside">
+    <!-- Logo -->
+    <div class="logo">
+      <a href="#">Soholeh</a>
+    </div>
+    <!-- Nav Toggler Btn -->
+    <div class="nav-toggler">
+      <span></span>
+    </div>
+    <!-- Nav -->
+    <ul class="nav">
+      <li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
+      <li><a href="#"><i class="fa fa-user"></i> About</a></li>
+      <li><a href="#"><i class="fa fa-list"></i> Service</a></li>
+      <li><a href="#"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+      <li><a href="#"><i class="fa fa-envelope"></i> Blog</a></li>
+      <li><a href="#"><i class="fa fa-comments"></i> Contact</a></li>
+    </ul>
+    <!-- Copyright -->
+    <div class="copyright-text">
+      &copy; 2021
+    </div>
+  </div>
+  <!-- Aside End-->
+  <!-- Main Content -->
+  <div class="main-content">
+    <!-- Home Section -->
+    <section class="home section">
       <div class="container">
-        <a class="navbar-brand" href="#home">Muhammad Solehudin</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link font-weight-bold" href="#home">Home</a>
-            <a class="nav-item nav-link font-weight-bold" href="#about">About</a>
-            <a class="nav-item nav-link font-weight-bold" href="#portfolio">Portfolio</a>
-            <a class="nav-item nav-link font-weight-bold" href="#contact" tabindex="-1" aria-disabled="true">Contact</a>
+        <div class="intro">
+          <img src="images/soleh.jpg" alt="profile" class="shadow-dark">
+          <h1>Muhammad Solehudin</h1>
+          <p>I'm a Web Developer</p>
+          <div class="social-links">
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
           </div>
         </div>
       </div>
-    </nav>
-
-    <!-- Home -->
-    <section id="home" class="home">
-    <div class="jumbotron" style="background-image: url(img/bg.jpg); background-size: 100% 100%;">
-      <div class="container text-center" >
-        <img src="img/me.jpg" width="25%" class="rounded-circle img-thumbnail">
-        <h1 class="display-4">Muhammad Solehudin</h1>
-        <p class="lead">I am an Information Systems Student at STMIK AKAKOM Yogyakarta.</p>
-        <p class="lead">I am interested in Web and Mobile Development.</p>
-      </div>
-    </div>
     </section>
+    <!-- Home Section End -->
+  </div>
+  <!-- Main Content End-->
+</div>
+<!-- Main Container End-->
 
-    <!-- About -->
-    <section id="about" class="about">
-    <div class="container">
-      <div class="row mb-4">
-        <div class="col text-center">
-          <h2>About</h2>
-        </div>
-      </div>
-      
-      <div class="row justify-content-center mb-4">
-        <div class="col-md-10 text-center">
-          <p>Junior? No! just a little of developer website and mobile. I am still learning and trying about developer website and mobile. ;)</p>
-          <p>Email : 
-            <a href="mailto:msolehudin130998@gmail.com">msolehudin130998@gmail.com</a>
-          </p>
-          <p>My Social Media : 
-          <a href="https://www.facebook.com/soleh130998" target="_blank" class="fa fa-facebook"></a>
-          <a href="https://twitter.com/soholeh" target="_blank" class="fa fa-twitter"></a>
-          <a href="https://instagram.com/soholeh" target="_blank" class="fa fa-instagram"></a>
-          </p>
-          <p>GitHub : 
-            <a href="https://github.com/soholeh" target="_blank" class="fa fa-github"></a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Portfolio -->
-  <section id="portfolio" class="portfolio bg-light pb-4">
-    <div class="container">
-      <div class="row mb-4 pt-4">
-        <div class="col text-center">
-          <h2>Portfolio</h2>
-        </div>
-      </div>
-
-      <div class="row mb-4">
-        <div class="col-md mb-4">
-          <div class="card">
-            <img src="img/1.png" class="card-img-top" alt="Card image cape">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md mb-4">
-          <div class="card">
-            <img src="img/2.png" class="card-img-top" alt="Card image cape">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md mb-4">
-          <div class="card">
-            <img src="img/2.png" class="card-img-top" alt="Card image cape">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md mb-4">
-          <div class="card">
-            <img src="img/3.png" class="card-img-top" alt="Card image cape">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md mb-4">
-          <div class="card">
-            <img src="img/4.png" class="card-img-top" alt="Card image cape">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-4">
-          <div class="col-md mb-4">
-            <div class="card">
-              <img src="img/prof-bg2.png" class="card-img-top" alt="Card image cape">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md mb-4">
-            <div class="card">
-              <img src="img/prof-bg.png" class="card-img-top" alt="Card image cape">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="contact mb-4">
-    <div class="container">
-      <div class="row pt-4 mb-4">
-        <div class="col text-center">
-          <h2>Contact</h2>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="col-lg-4">
-          <div class="card bg-light mb-3 text-center">
-            <div class="card-body">
-              <h5 class="card-title">Contact Me</h5>
-              <p class="card-text">You can contact me at:</p>
-            </div>
-          </div>
-          <ul class="list-group">
-            <li class="list-group-item"><h1>Location</h1></li>
-            <li class="list-group-item">My Office</li>
-            <li class="list-group-item">Jl. Rajawali Babadan Baru No. 98, Banguntapan, Bantul 55198</li>
-            <li class="list-group-item">Special Region of Yogyakarta, Indonesia</li>
-            <li class="list-group-item fa fa-whatsapp">     
-                <a href="https://api.whatsapp.com/send?phone=6281227917430" target="_blank" class="">081227917430</a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Map -->
-        <div class="col-lg-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d988.1906561089422!2d110.40393982916662!3d-7.81493299964804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDgnNTMuOCJTIDExMMKwMjQnMTYuMiJF!5e0!3m2!1sid!2sid!4v1583710124954!5m2!1sid!2sid"
-            width="100%" height="413" frameborder="1" style="border:1;" allowfullscreen="">
-          </iframe>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="text-dark" style="background-color: #D3D3D3;">
-    <div class="container">
-      <div class="row pt-3">
-        <div class="col text-center">
-          <p>Copyright &copy; 2020.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
+
