--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
         <div class="intro">
           <img src="images/soleh.jpg" alt="profile" class="shadow-dark">
           <h1>Muhammad Solehudin</h1>
-          <p>I'm a Web Developer</p>
           <div class="social-links">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://twitter.com/soholeh"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
