--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <h1>Muhammad Solehudin</h1>
           <div class="social-links">
             <a href="https://twitter.com/soholeh"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/soleh130998"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/soholeh/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/muhammad-solehudin-08sep23/"><i class="fa fa-linkedin"></i></a>
           </div>
         </div>
       </div>
